<resources>
    <string name="app_name">Ayiti Touris</string>

    <string name="action_account">Account</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About Us</string>

    <string name="action_add">Ajouter</string>
    <string name="action_favorite">vos Favorit</string>

    <string name="title_activity_detail">DetailActivity</string>

    <string name="etE_mail">E-Mail</string>
    <string name="etNomComplet">Nom Complet</string>
    <string name="etPhone">(+509) 4692-2424</string>
    <string name="telephone">Telephone</string>
    <string name="date_de_naissance">Date de Naissance</string>
    <string name="DateNaissance">Date de naissance</string>
    <string name="envoyer">Envoyer</string>
    <string name="nom_complet">Nom Complet</string>
    <string name="title_activity_sign_in">Connecter</string>
    <string name="title_activity_sign_up">Enregistrer</string>
    <string name="share">Share</string>
    <string name="sexeTitle">Sexe</string>

    <string name="girl_ipsum">
        Morbi posuere lorem nec elit dapibus, vitae accumsan mauris pellentesque.
        Vestibulum a lobortis mi. Vestibulum lacinia molestie semper. Pellentesque
        ultrices arcu lacus, interdum mollis nibh convallis ut. Aliquam sagittis
        sem a lacus gravida, eu accumsan purus volutpat. Donec tempus, est idk
        tristique consectetur, lacus ligula dignissim turpis, cursus commodo turpis
        libero in purus. Phasellus tempus gravida tempor.
    </string>

    <string name="action_search">Chercher</string>
    <string name="title_activity_maps">Map</string>
    <string name="dot_d_une_connexion_wi_fi_gratuite_d_un_restaurant_et_d_un_casino_o_vous_pourrez_vous_divertir_le_paradis_hotel_propose_des_h_bergements_acceptant_les_animaux_domestiques_situ_s_port_au_prince_un_parking_priv_gratuit_sur_place_est_votre_disposition_les_chambres_climatis_es_disposent_d_une_t_l_vision_cran_plat_et_d_une_salle_de_bains_privative_quip_e_d_une_baignoire_ou_d_une_douche_l_tablissement_assure_un_service_de_navette_gratuit_vous_pourrez_jouer_au_billard_sur_place_l_a_roport_international_de_port_au_prince_le_plus_proche_est_distant_de_6_km_nous_parlons_votre_langue_l_tablissement_paradis_hotel_accueille_des_clients_booking_com_depuis_le_31_mars_2015">Doté d\'une connexion Wi-Fi gratuite, d\'un restaurant et d\'un casino où vous pourrez vous divertir, le Paradis Hotel propose des hébergements acceptant les animaux domestiques situés à Port-au-Prince. Un parking privé gratuit sur place est à votre disposition. Les chambres climatisées disposent d\'une télévision à écran plat et d\'une salle de bains privative équipée d\'une baignoire ou d\'une douche. L\'établissement assure un service de navette gratuit. Vous pourrez jouer au billard sur place. L\'aéroport international de Port-au-Prince, le plus proche, est distant de 6 km. Nous parlons votre langue ! L\'établissement Paradis Hotel accueille des clients Booking.com depuis le 31 mars 2015.</string>


    <!-- activity names -->
    <string name="activity_registration">Endless-To-Go Registration</string>
    <string name="activity_login">Endless-To-Go Login</string>


    <!-- info messages -->
    <string name="info_registered_template">Registered. ObjectId: %s</string>
    <string name="info_registered_success">Registered successfully</string>
    <string name="info_logged_in">Logged in. ObjectId: %s</string>

    <!-- warnings -->
    <string name="warning_name_empty">Name cannot be empty</string>
    <string name="warning_name_lowercase">Name should start from an uppercase letter</string>
    <string name="warning_email_empty">Email cannot be empty</string>
    <string name="warning_email_invalid">Invalid email format</string>
    <string name="warning_password_empty">Password cannot be empty</string>
    <string name="warning_passwords_do_not_match">Passwords do not match</string>


    <!-- loading messages -->
    <string name="loading_empty">Loading…</string>
    <string name="loading_register">Sending registration request…</string>
    <string name="loading_login">Logging in…</string>


    <!-- text labels -->
    <string name="label_name">Name:</string>
    <string name="label_email">Email address:</string>
    <string name="label_password">Password:</string>
    <string name="label_password_confirm">Retype password:</string>

    <!-- button labels -->
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_login_facebook">Login with Facebook</string>
    <string name="button_login_twitter">Login with Twitter</string>

    <!-- texts -->
    <string name="register_prompt">Do not have an account? Register now</string>
    <string name="divider_or">OR</string>
    <string name="register_link">Register</string>

    <string name="plustard">Connecter pour jouir des privileges, Plus Tard</string>
    <string name="link"> Plus Tard</string>


    <!-- text pour BottomNavigation -->

    <string name="title_hotel">Hotels</string>
    <string name="title_retaurant">Restaurants</string>
    <string name="title_club">Clubs</string>
    <string name="title_Monument">Monuments</string>
    <string name="title_plages">Plages</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="activity_example">Activity example</string>
    <string name="fragment_example">Fragment example</string>
    <string name="activity_with_fragment">Activity with fragment</string>
    <string name="subtitle_activity_only">Activity only</string>
    <string name="subtitle_from_fragment">From fragment</string>
    <string name="search_something">Search something…</string>
    <string name="expanded">Expanded!</string>
    <string name="collapsed">Collapsed!</string>
    <string name="submitted">Submitted: %1$s</string>

    // My Maps

    <string name="route_distance">Distance</string>
    <string name="route_distance_value">40.2 Km</string>
    <string name="route_duration">Duration</string>
    <string name="route_duration_value">48 mins</string>
    <string name="server_error">Server error. Something when wrong with the server</string>

</resources>
