<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".activities.MainActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_account" android:title="@string/action_account"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_favorite" android:title="Vos favorit"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />


  <!--  <item android:id="@+id/action_search" android:title="@string/action_search"
        android:orderInCategory="1" app:showAsAction="ifRoom" android:icon="@mipmap/ic_search"/>-->
</menu>
